--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,32 @@
 {
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "proxy": "http://localhost:5000",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "@react-oauth/google": "^0.6.0",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
+    "google-auth-library": "^8.7.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.5",
+    "sass": "^1.57.1",
+    "sendgrid": "^5.2.3",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
   }
 }
